--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,14 @@
-version: '3.8'
-
+version: "3.4"
 services:
-  dev:
-    build: 
-      context: ./
-      dockerfile: Dockerfile
-    volumes:
-      - ./:/app
-    ports:
-      - '8000:8000'
+ vite_docker:
+   image: node:alpine
+   container_name: vite_docker
+   entrypoint: /bin/sh
+   ports:
+     - 8000:8000
+   working_dir: /srv/app
+   volumes:
+     - type: bind
+       source: ./
+       target: /srv/app
+   tty: true
